<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="0.6">
        
        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="@dimen/ImageView_layoutHeight"
            android:src="@drawable/logo11_4_213024"
             />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/login_horizontalMargin"
            android:layout_marginRight="@dimen/login_horizontalMargin"

            >


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ediTextWhite"
                >


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_de_usuario"
                    android:inputType="text"
                    >
                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ediTextWhite"
                android:layout_marginTop="@dimen/login_horizontalMarginTop"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/contrasena"
                    >
                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bottom_text"
                android:layout_marginTop="@dimen/login_horizontalMarginTop"
                android:theme="@style/RaiseButtonDark"
                android:onClick="login"
                ></Button>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/colorPrimary"
                >

                <TextView
                    android:id="@+id/no_tienes_cuenta.."
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_tienes_cuenta.."
                    android:textColor="@color/editText_white"

                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crea_una_aqui"
                    android:textColor="@color/editText_white"
                    android:layout_toRightOf="@+id/no_tienes_cuenta.."
                    android:onClick="VamosCreaUnacuenta"
                    />



            </RelativeLayout>




        </LinearLayout>

    </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>